# ue3-tools

./: .clangd  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DisConv_Blurb  EXPORT_COMPLIANCE.md  README.md  build.rs
FontTest/: mod.toml
crates/wrapper/: Cargo.toml  build.rs
crates/wrapper/src/: hook.rs  lib.rs  log.rs  mod_toml_mini.rs  overlay.rs  patch_fmt.rs  upk.rs
example_mod/: MyFont.Font  MyFont_PageA.Texture2D  mod.toml
src/: \  fontmod.rs  main.rs  mod_engine.rs  names_table.txt  pseudo.rs  pseudo_parse.rs  schema.rs  schemadb.rs  scriptcompiler.rs  scriptdisasm.rs  scriptpatcher.rs  ui.rs  upkdecompress.rs  upkfont.rs  upkpacker.rs  upkprops.rs  upkreader.rs  versions.rs
src/native/: mod.rs  soundnodewave.rs  swfmovie.rs  texture2d.rs
src/types/: font.rs
src/utils/: dds.rs  decompress.rs  mod.rs
wrapper/: CMakeLists.txt
wrapper/src/: disasm.cpp  disasm.hpp  dllmain.cpp  hook.cpp  hook.hpp  linker_hook.cpp  linker_hook.hpp  log.cpp  log.hpp  logs.cpp  logs.hpp  mod_loader.cpp  mod_loader.hpp  mod_toml_mini.cpp  mod_toml_mini.hpp  overlay.cpp  overlay.hpp  patch_fmt.cpp  patch_fmt.hpp  pattern_scanner.cpp  pattern_scanner.hpp  trampoline_hook.cpp  trampoline_hook.hpp  ue3_types.cpp  ue3_types.hpp  upk.cpp  upk.hpp  util.cpp  util.hpp
