[package]
name = "ue3-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.2"
freetype-rs = "0.38.0"
libc = "0.2.177"
lzo-sys = "1.0.0"
ron = "0.11.0"
serde = { version = "1.0.224", features = ["derive"] }
