[package]
name = "dinput8_wrapper"
version = "0.1.0"
edition = "2024"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
flate2 = { version = "1.1.9", features = ["zlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
panic = "abort"
strip = "symbols"
